# shader-art-rs

./: .gitignore  Cargo.toml  Readme.md
.github/workflows/: ci.yaml
src/: app.rs  cli.rs  lib.rs  main.rs  pipeline.rs  shader.wgsl  ui.rs  vertex.rs
