[package]
name = "shader-art-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.17"
pollster = "0.3.0"
bytemuck = { version = "1.13.1", features = ["derive"] }
image = "0.24.6"
futures-intrusive = "0.5.0"
gif = "0.12.0"
anyhow = "1.0.72"
clap = { version = "4.3.21", features = ["derive", "cargo"] }
spinoff = "0.8.0"
features = "0.10.0"
dots = "0.5.2"
