[package]
name = "shader-art-rs"
version = "0.1.0"
license = "AGPL-3.0"
edition = "2021"
description = "Shader art using webgpu"
readme = "Readme.md"
homepage = "https://github.com/pythops/shader-art-rs"
repository = "https://github.com/pythops/shader-art-rs"

[dependencies]
winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.17"
pollster = "0.3.0"
bytemuck = { version = "1.13.1", features = ["derive"] }
image = "0.24.7"
futures-intrusive = "0.5.0"
gif = "0.12.0"
anyhow = "1.0.75"
clap = { version = "4.3.23", features = ["derive", "cargo"] }
spinoff = { version = "0.8.0", features = ["dots"] }
