[package]
name = "shader-art-rs"
version = "0.1.0"
license = "AGPL-3.0"
edition = "2021"
description = "Shader art using webgpu"
readme = "Readme.md"
homepage = "https://github.com/pythops/shader-art-rs"
repository = "https://github.com/pythops/shader-art-rs"

[dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
wgpu = "0.18"
pollster = "0.3"
bytemuck = { version = "1", features = ["derive"] }
image = "0.24"
futures-intrusive = "0.5"
gif = "0.12"
anyhow = "1"
clap = { version = "4", features = ["derive", "cargo"] }
spinoff = { version = "0.8", features = ["dots"] }
